added a paragraph break in abstract, added that we'll give recs in intro.

--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -151,7 +151,9 @@ naturally evaluated at directions other than the discrete ordinates used in
 arriving at the solutions, and those discrete ordinates at which the problem is
 solved may be chosen in a strategic way. Of particular interest is that the LDO
 equations have been shown to mitigate ray effects at increased angular
-resolutions. Here, we assess the LDO equations' scalar flux solutions as input
+resolutions. 
+
+Here, we assess the LDO equations' scalar flux solutions as input
 in the CADIS and \fwc\ methods for Monte Carlo variance reduction parameter
 generation. Monte Carlo calculations and Figures of Merit using VR parameters
 from the LDO equations are compared against those using VR parameters from
@@ -213,7 +215,7 @@ without modification for these challenging problems.
 
 This work characterizes the performance of Monte Carlo VR parameters based on
 scalar flux solutions from solving the Lagrange Discrete Ordinates (LDO)
-formulation of the transport equation \cite{ahrens}. The LDO formulation has
+formulation of the transport equation \cite{ahrens} and provides recommendations for their use in solving engineering problems. The LDO formulation has
 more flexible representation of angle space and results in fewer ray effects
 than equivalently-sized quadrature sets used in standard discrete ordinates
 calculations. We therefore employ the LDO equations' solutions in the standard
@@ -232,7 +234,7 @@ given regarding the CADIS and \fwc\ methods, the discrete ordinates equations,
 the LDO equations, and previous related work in Section II. Engineering test
 problems are then described with relevant calculation parameters listed in
 Section III; numerical results and discussion follow in Section IV. We
-conclude in Section V with a summary of the results and a discussion of
+conclude in Section V with a summary of the results, recommendations for using LDO, and a discussion of
 future work.
 
 %%---------------------------------------------------------------------------%%
