added a little more framing to the summary.

--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -1309,7 +1309,7 @@ points) or order 8 (81 quadrature points) may be used to good effect.
 %%---------------------------------------------------------------------------%%
 \subsection{Summary}
 
-The LDO equations saw their best-performing Monte Carlo VR parameters in the
+We tested the use of LDO quadrature sets in CADIS and \fwc\ for problems with challenging angular streaming behavior. These real engineering problems are difficult for any Monte Carlo solver, and we set out to identify if the angular properties of LDO could provide an advantage over traditional \sn\ quadratures. The LDO equations saw their best-performing Monte Carlo VR parameters in the
 \fwc\ context, where the LDO formulation's angular information is better
 incorporated into the variance reduction parameter generation.
 
