--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -215,27 +215,30 @@ without modification for these challenging problems.
 
 This work characterizes the performance of Monte Carlo VR parameters based on
 scalar flux solutions from solving the Lagrange Discrete Ordinates (LDO)
-formulation of the transport equation \cite{ahrens} and provides recommendations for their use in solving engineering problems. The LDO formulation has
-more flexible representation of angle space and results in fewer ray effects
-than equivalently-sized quadrature sets used in standard discrete ordinates
-calculations. We therefore employ the LDO equations' solutions in the standard
-CADIS and \fwc\ methods to assess how well the LDO representation's unique
-treatment of scattering and asymmetry in angle incorporate angular information
-into the resulting scalar flux solutions and corresponding Monte Carlo VR
-parameters. The results for several engineering test problems are compared to
-results where the VR parameters were generated with standard formulations of
-the transport equation. All deterministic calculations were performed with the
-Denovo radiation transport code \cite{denovo} in the Exnihilo framework, with
-Monte Carlo VR parameters generated via the ADVANTG software \cite{advantg}
-and Monte Carlo calculations done with MCNP5 \cite{mcnp}.
+formulation of the transport equation \cite{ahrens} and provides
+recommendations for their use in solving engineering problems. The LDO
+formulation has more flexible representation of angle space and results in
+fewer ray effects than equivalently-sized quadrature sets used in standard
+discrete ordinates calculations. We therefore employ the LDO equations'
+solutions in the standard CADIS and \fwc\ methods to assess how well the LDO
+representation's unique treatment of scattering and asymmetry in angle
+incorporate angular information into the resulting scalar flux solutions and
+corresponding Monte Carlo VR parameters. The results for several engineering
+test problems are compared to results where the VR parameters were generated
+with standard formulations of the transport equation. All deterministic
+calculations were performed with the Denovo radiation transport code
+\cite{denovo} in the Exnihilo framework, with Monte Carlo VR parameters
+generated via the ADVANTG software \cite{advantg} and Monte Carlo calculations
+done with MCNP5 \cite{mcnp}.
 
 The remainder of the paper is structured as follows: background information is
 given regarding the CADIS and \fwc\ methods, the discrete ordinates equations,
 the LDO equations, and previous related work in Section II. Engineering test
 problems are then described with relevant calculation parameters listed in
 Section III; numerical results and discussion follow in Section IV. We
-conclude in Section V with a summary of the results, recommendations for using LDO, and a discussion of
-future work.
+conclude in Section V with a summary of the results, recommendations for using
+the LDO formulation's associated Monte Carlo VR parameters, and a discussion
+of future work.
 
 %%---------------------------------------------------------------------------%%
 \section{Background}
@@ -538,12 +541,14 @@ and materials used in the test cases as well as why each problem was chosen.
 Then, we discuss the parameters chosen for the various deterministic and Monte
 Carlo calculations performed in this work.
 
-Deterministic solutions for the test cases using the various quadrature sets are
-provided in the earlier publication by Rowland et al.\ \cite{kr18}. Generally,
-the problems were chosen because they are computationally challenging due to
-streaming pathways and ray effects; these can be seen clearly in the figures in reference \cite{kr18}. The test cases are also of interest in that they are
-relevant to real-world application problems. We direct the reader to the earlier
-article by Rowland et al.\ for full detail \cite{kr18}.
+Deterministic solutions for the test cases using the various quadrature sets
+are provided in the earlier publication by Rowland et al.\ \cite{kr18}.
+Generally, the problems were chosen because they are computationally
+challenging due to streaming pathways and ray effects; these can be seen
+clearly in the figures in the publication. The test cases are also
+of interest in that they are relevant to real-world application problems. We
+direct the reader to the earlier article by Rowland et al.\ for full detail
+\cite{kr18}.
 
 %%---------------------------------------------------------------------------%%
 \subsection{Steel Plate Embedded in Water}
@@ -552,7 +557,8 @@ article by Rowland et al.\ for full detail \cite{kr18}.
 The first test case we describe is an idealized geometry of a steel plate
 embedded in water; it is modeled after the problem presented by Wilson and
 Slaybaugh \cite{wilsonslaybaugh}. This idealized geometry is of interest
-because it has been shown to be computationally challenging: there is strong angular streaming down the steel plate embedded in water; resonances in the
+because it has been shown to be computationally challenging: there is strong
+angular streaming along the steel plate embedded in water; resonances in the
 iron cause self-shielding in energy and spatial self-shielding comes from the
 presence of a thin plate of resonance material embedded in a moderating
 material. Because of this, Monte Carlo variance reduction parameters generated
@@ -665,7 +671,8 @@ Vacuum boundary conditions were applied to the outside of the entire problem.
 \subsection{Simplified Portal Monitor}
 
 The final problem described here, a simplified portal monitor scenario, is a
-\textit{photon-only} transport problem (the first two test problems are only transporting neutrons). Portal monitors are large detector
+\textit{photon-only} transport problem (the first two test problems are
+neutron-only transport problems). Portal monitors are large detector
 panels used to screen cargo for illicit radioactive materials. The problem
 models a cargo container holding a Ba-133 photon point source and large blocks
 of homogenized iron and polyethylene. The geometry and material configuration
@@ -851,10 +858,21 @@ presented for the test cases in the contexts of both the CADIS and
 angular mesh refinement used in the deterministic calculations from which
 Monte Carlo variance reduction parameters were generated. For additional
 results and analysis, including comparisons with experimentally-gathered
-data where available, we refer the reader to Rowland's previous related publication
-\cite{kr}.
+data where available, we refer the reader to Rowland's previous related
+publication \cite{kr}.
 
-When considering the results presented, keep in mind that some of these problems are nearly pathological in difficulty, especially the steel plate embedded in water. In some cases, no quadrature is able to create VR parameters to obtain a valid solution in a reasonable time. In these circumstances, we still compare performance in terms of FOM. The motivation is that, with enough simulated particles, a correct solution would be obtained. Therefore, a better FOM should still indicate which method to choose to get the correct answer faster. The results below elucidate when LDO is a good choice, and we acknowledge that we have not yet found a method that always works when problems have strong angular anisotropy.  The contribution here is that LDO increases the number of problems we can solve with CADIS and \fwc.
+When considering the results presented, keep in mind that some of these
+problems are nearly pathological in difficulty, especially the steel plate
+embedded in water. In some cases, no quadrature is able to create VR
+parameters to obtain a valid solution in a reasonable time. In these
+circumstances, we still compare performance in terms of FOM. The motivation is
+that, with enough simulated particles, a correct solution would be obtained.
+Therefore, a better FOM should still indicate which method to choose to get
+the correct answer more quickly. The results below elucidate when the LDO
+equations are a good choice, and we acknowledge that we have not yet found a
+method that always works when problems have strong angular anisotropy. The
+contribution here is that using the LDO equations to generate Monte Carlo VR
+parameters increases the number of problems we can solve with CADIS and \fwc.
 
 %%---------------------------------------------------------------------------%%
 \subsection{Steel Plate Embedded in Water}
@@ -892,19 +910,19 @@ order 1 (8 quadrature points) result in the lowest FOM value.
 \end{figure}
 
 To conclude this subsection, we consider the overall trends in angular mesh
-refinement in Figure \ref{steel-cadis}. It
-appears that the angular mesh refinement does not have a large influence on the
-flux tally value in this problem, as all of the tally results using VR
-parameters fall within the same order of magnitude and do not exhibit any
-trends as a function of the number of discrete angles used. This indicates
-that any improvement gained by more accurate angular information is offset by
-the increased computational cost. The Figures of Merit vary somewhat more
-greatly. Specifically, the LDO VR parameters appear to gather around FOM
-values of 0.005 even as the number of discrete angles used is increased. Thus,
-for the steel plate in water problem solved with the CADIS method, one could
-use a relatively low-order (\textit{i.e.}, order 8, which is 81 quadrature points) LDO
-quadrature set to generate Monte Carlo VR parameters that result in a Figure
-of Merit comparable to or better than those produced by finer angular meshes.
+refinement in Figure \ref{steel-cadis}. It appears that the angular mesh
+refinement does not have a large influence on the flux tally value in this
+problem, as all of the tally results using VR parameters fall within the same
+order of magnitude and do not exhibit any trends as a function of the number
+of discrete angles used. This indicates that any improvement gained by more
+accurate angular information is offset by the increased computational cost.
+The Figures of Merit vary somewhat more greatly. Specifically, the LDO VR
+parameters appear to gather around FOM values of 0.005 even as the number of
+discrete angles used is increased. Thus, for the steel plate in water problem
+solved with the CADIS method, one could use a relatively low-order
+(\textit{i.e.}, order 8, which is 81 quadrature points) LDO quadrature set to
+generate Monte Carlo VR parameters that result in a Figure of Merit comparable
+to or better than those produced by finer angular meshes.
 
 \FloatBarrier
 %%---------------------------------------------------------------------------%%
@@ -913,7 +931,7 @@ of Merit comparable to or better than those produced by finer angular meshes.
 For the \fwc\ calculations for the steel plate in water, the adjoint source
 was set to be a mesh tally over all of the air beyond the steel plate. The
 discretization for the adjoint source mesh tally is the same as that listed in
-Section \ref{sec:steel_params}.  Specifically, the adjoint source mesh is
+Section \ref{sec:steel_params}. Specifically, the adjoint source mesh is
 identical to the overall problem mesh in the $x-$ and $y-$directions but
 starts at $z = 130$ cm and extends to the problem boundary at $z = 140$ cm.
 The Monte Carlo calculation with VR parameters from the Galerkin
@@ -952,10 +970,10 @@ refinement; the coarsest and finest angular meshes produce Monte Carlo VR
 parameters that result in reduced Figures of Merit. This indicates that too
 low an angular resolution likely does not provide enough accuracy, while a
 high resolution adds computational cost without much accuracy benefit.
-Considering Figure \ref{steel-fwc}, we note
-that one would wish to use a lower-order (\textit{e.g.}, order 5, which is 36
-quadrature points) LDO quadrature set to generate variance reduction
-parameters for a Monte Carlo mesh tally using the \fwc\ method.
+Considering Figure \ref{steel-fwc}, we note that one would wish to use a
+lower-order (\textit{e.g.}, order 5, which is 36 quadrature points) LDO
+quadrature set to generate variance reduction parameters for a Monte Carlo
+mesh tally using the \fwc\ method.
 
 \FloatBarrier
 %%---------------------------------------------------------------------------%%
@@ -1050,8 +1068,9 @@ multiple detector locations using the \fwc\ method for the DLVN problem.
 
 \begin{table}[!hbt]
 \centering
-\caption{\fwc\ FOM values for representative quadratures for the DLVN problem, with best performance at each detector indicated with bold font.}
-% I don't know why this isn't centered anymore... sorry!
+\captionsetup{justification=centering}
+\caption{\fwc\ FOM values for representative quadratures for the DLVN problem,
+         with best performance at each detector indicated with bold font.}
 \label{dlvn-fwc-fom-table}
 \begin{tabular}{l|cccccc}
 \multicolumn{1}{l|}{Quadrature}
@@ -1227,8 +1246,10 @@ for the bottom detector in the array.
 
 \begin{table}[!hbt]
 \centering
-\small
-\caption{\fwc\ FOM values for representative quadratures for the portal monitor, with best performance at each detector indicated with bold font.}
+\captionsetup{justification=centering}
+\caption{\fwc\ FOM values for representative quadratures for the portal
+         monitor, with best performance at each detector indicated with bold
+         font.}
 \label{cargo-fwc-fom-table}
 \begin{tabular}{l|cccc}
 \multicolumn{1}{l|}{Quadrature}
@@ -1309,9 +1330,14 @@ points) or order 8 (81 quadrature points) may be used to good effect.
 %%---------------------------------------------------------------------------%%
 \subsection{Summary}
 
-We tested the use of LDO quadrature sets in CADIS and \fwc\ for problems with challenging angular streaming behavior. These real engineering problems are difficult for any Monte Carlo solver, and we set out to identify if the angular properties of LDO could provide an advantage over traditional \sn\ quadratures. The LDO equations saw their best-performing Monte Carlo VR parameters in the
-\fwc\ context, where the LDO formulation's angular information is better
-incorporated into the variance reduction parameter generation.
+In this work, we tested the use of LDO quadrature sets in CADIS and \fwc\ for
+problems with challenging angular streaming behavior. These real engineering
+problems are difficult for any Monte Carlo solver, and we set out to identify
+if the angular properties of the LDO equations could provide an advantage over
+traditional \sn\ quadratures. The LDO equations saw their best-performing
+Monte Carlo VR parameters in the \fwc\ context, where the LDO formulation's
+angular information is better incorporated into the variance reduction
+parameter generation.
 
 In the context of the \fwc\ method, we found that low-order (5 or 8) angular
 meshes (36 to 81 discrete ordinates) are sufficient to produce forward flux
