added madicken's review article, which is now out, to bib.

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -9,6 +9,16 @@
   publisher={American Nuclear Society}
 }
 
+@article{munk-review,
+  title={Review of Hybrid Methods for Deep-Penetration Neutron Transport},
+  author={Munk, Madicken and Slaybaugh, Rachel},
+  journal={Nuclear Science and Engineering},
+  pages={Available online April 2019},
+  url={https://www.tandfonline.com/doi/full/10.1080/00295639.2019.1586273},
+  year={2019},
+  publisher={American Nuclear Society}
+}
+
 @article{sw-dlvn,
   title={{Deterministic Parameter Study for Fixed-Source Calculations Using \fwc}},
   author={Slaybaugh, R. N. and Wilson, S. C.},
