--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -114,8 +114,8 @@ Reduction Parameter Generation} %title of paper
 \author{
 \vspace{20mm}
 %list of authors, with corresponding author marked by asterisk
-\\Kelly L.\ Rowland,$^{\text{a},\ast}$ Cory D.\ Ahrens,$^\text{b}$ Steven Hamilton,$^\text{c}$ 
-\\and R.N.\ Slaybaugh$^{\text{a}}$\\[4pt] 
+\\Kelly L.\ Rowland,$^{\text{a}}$ Cory D.\ Ahrens,$^\text{b}$ Steven Hamilton,$^\text{c}$ 
+\\and R.N.\ Slaybaugh$^{\text{a},\ast}$\\[4pt] 
 %affiliations of authors
 \textit{$^a$University of California, Berkeley, Nuclear Engineering Department}\\[-10pt]
 \textit{4173 Etcheverry Hall, Berkeley, CA 94720, USA} \\[-5pt]
@@ -123,7 +123,7 @@ Reduction Parameter Generation} %title of paper
 \textit{Los Alamos National Laboratory, Los Alamos, NM 87545, USA}\\[-5pt]
 \textit{$^c$Oak Ridge National Laboratory, Radiation Transport and Criticality Group} \\ [-10pt]
 \textit{P.O. Box 2008, Oak Ridge, TN 37831-6170, USA} \\ [-2pt]
-{$^\ast$krowland@berkeley.edu}}       %address and email address for correspondence
+{$^\ast$slaybaugh@berkeley.edu}}       %address and email address for correspondence
 
 %instead of returning the date, this repurposes the \maketitle command to print the number of pages, tables, and figures
 \date{
@@ -534,7 +534,7 @@ throughout the problem space and could result in inefficient particle tracking.
 
 The purpose of this work is to enable the solution of real engineering problems
 that we cannot solve easily with current tools. Thus, we focus on test cases
-that exhibit extreme cases of the behaviors that challenge CADIS and \fwc. The
+that exhibit extreme versions of the behaviors that challenge CADIS and \fwc. The
 goal of this work is to see if the LDO formulation can provide better
 performance than other \sn\ methods, noting that it may not be practical to find
 accurate solutions to these problems with CADIS or \fwc\ in a reasonable amount
@@ -565,7 +565,9 @@ iron cause self-shielding in energy and spatial self-shielding comes from the
 presence of a thin plate of resonance material embedded in a moderating
 material. Because of this, Monte Carlo variance reduction parameters generated
 from deterministic solutions exhibit slow Monte Carlo error reduction
-\cite{wilsonslaybaugh}. We aim to discern if angular mesh refinement in
+\cite{wilsonslaybaugh}. 
+
+We aim to discern if angular mesh refinement in
 generating VR parameters has any effect on Monte Carlo error reduction as well
 as how the LDO equations perform in this regard when compared to standard
 quadrature types. A diagram of the problem geometry is shown in Figure
